[Add] Login 및 Logout 기능 구현

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,6 @@
 {
+  "workbench.colorCustomizations": {
+    "titleBar.activeBackground": "#7e8376",
+    "titleBar.inactiveBackground": "#7e8376"
+  }
 }
